tests/snapshots/preauth__credentials.snap
---
source: tests/preauth.rs
assertion_line: 169
expression: state.credentials()
---
- id: "http://credibil.io/credentials/EmployeeIDCredential"
  issuer: "http://credibil.io"
  issuer_name: Credibil
  issued: "[issued]"
  type:
    - EmployeeIDCredential
    - VerifiableCredential
  format: jwt_vc_json
  claim_definitions:
    address:
      country:
        value_type: string
        display:
          - name: Country
            locale: en-NZ
      locality:
        value_type: string
        display:
          - name: Locality
            locale: en-NZ
      region:
        value_type: string
        display:
          - name: Region
            locale: en-NZ
      street_address:
        value_type: string
        display:
          - name: Street Address
            locale: en-NZ
    email:
      mandatory: true
      value_type: string
      display:
        - name: Email
          locale: en-NZ
    family_name:
      mandatory: true
      value_type: string
      display:
        - name: Family name
          locale: en-NZ
    given_name:
      mandatory: true
      value_type: string
      display:
        - name: Given name
          locale: en-NZ
  subject_claims:
    - claims:
        address:
          locality: Wellington
          street_address: 123 Fake St
        email: normal.user@example.com
        family_name: Person
        given_name: Normal
      id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
  issuance_date: "[issuance_date]"
  display:
    - name: Employee ID
      locale: en-NZ
      logo:
        uri: "https://credibil.io/assets/employee.png"
        alt_text: Employee ID Logo
      description: Credibil employee ID credential
      background_color: "#323ed2"
      background_image:
        uri: "https://credibil.io/assets/employee-background.png"
        alt_text: Employee ID Background
      text_color: "#ffffff"
